...
        label = "Query",
        testTag = "tab_query",
        iconResId = R.drawable.ic_section_report,
    ),
    SETTINGS(
        label = "Settings",
        testTag = "tab_settings",
        iconResId = R.drawable.ic_section_config,
    ),
}

@Composable
internal fun BillsAndroidApp(
...
